# social-search

./: .env.example  .gitignore  README.md  package.json  pyproject.toml
docs/: video-ppt-image-understanding.md  visual-extraction.md
src/api/: __init__.py  dependencies.py  main.py  settings.py  task_manager.py  worker.py
src/api/routers/: system.py  tasks.py
src/social_extract/: __init__.py  audio.py  cli.py  core.py  cuda_runtime.py  env.py  errors.py  extractor.py  formats.py  frames.py  gemini_client.py  models.py  ocr.py  openai_client.py  paths.py  progress.py  subtitles.py  transcriber.py  vision.py  visual.py  visual_description.py  yt_dlp_client.py
tests/: test_cli.py  test_extractor.py  test_formats.py  test_gemini_client.py  test_ocr.py  test_openai_client.py  test_progress.py  test_subtitles.py  test_task_manager.py  test_transcriber.py  test_visual.py  test_visual_description.py  test_worker.py  test_yt_dlp_client.py
web/: index.html  main.js  styles.css
web/src/: main.js  styles.css
